gccida/g1/cselib_subst_to_values
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_subst_to_values/src/cselib.c:1258:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_subst_to_values/src/cselib.c:1260:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_subst_to_values/src/cselib.c:1324:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v15.rtwint = ( __int64)x->fld[v4]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_subst_to_values/src/cselib.c:1351:30: error: use of undeclared identifier 'insn'
fancy_abort( ( const char *)&insn, 806, "cselib_subst_to_values"); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_subst_to_values/src/obj/cselib.o] Error 1
